<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:clipChildren="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/grey1"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:text="@string/ticket_price"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:text="6 990 ₽" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_red_circle" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_display_regular"
                                android:text="@string/time"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                tools:text="03:15 — 07:10" />

                            <TextView
                                android:id="@+id/tv_time_in_way"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:fontFamily="@font/sf_pro_display_semibold"
                                android:text="@string/way_time"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                tools:text="4ч в пути" />

                            <TextView
                                android:id="@+id/without_transfers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_display_semibold"
                                android:text="@string/without_transfers"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                tools:text="/ Без пересадок"
                                android:visibility="invisible"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_departure_airport"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/sf_pro_display_regular"
                                android:textColor="@color/grey6"
                                android:textSize="14sp"
                                tools:text="VKO" />

                            <TextView
                                android:id="@+id/tv_arrival_airport"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:fontFamily="@font/sf_pro_display_regular"
                                android:textColor="@color/grey6"
                                android:textSize="14sp"
                                tools:text="AER" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:background="@drawable/badge_shape"
            android:elevation="3dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:text="@string/badge"
            android:textSize="14sp"
            tools:text="Без пересадок"
            android:textColor="@android:color/white"
            android:translationY="-8dp"
            android:visibility="invisible"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>